--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   validators: ^3.0.0
   simple_grid: ^0.1.1
   flutter_svg: ^1.1.4
+  flutter_bloc: ^8.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
