--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+
+  #FireStore
+  firebase_core: ^1.24.0
+  firebase_auth: ^3.11.2
+  cloud_firestore: ^3.5.1
+
   sqflite: ^2.0.3+1
   intl: ^0.17.0
   flutter_staggered_grid_view: ^0.6.2
@@ -40,7 +46,8 @@ dependencies:
   simple_grid: ^0.1.1
   flutter_svg: ^1.1.4
   flutter_bloc: ^8.1.1
-
+  omni_datetime_picker: ^0.1.2
+  equatable: ^2.0.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
